--- a/Tailor/Info.plist
+++ b/Tailor/Info.plist
@@ -12,6 +12,7 @@
 	<array>
 		<string>Jaldi-Regular.ttf</string>
 		<string>Jaldi-Bold.ttf</string>
+		<string>LaBelleAurore.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
